--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "home",
   "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "dev": "vite",
+    "dev": "node node_modules/esbuild/install.js && vite",
     "build": "vite build"
   },
   "dependencies": {
@@ -12,17 +13,19 @@
     "vuex": "^4.0.2"
   },
   "devDependencies": {
+    "@types/node": "^16.6.2",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.2",
+    "@vitejs/plugin-vue": "^1.4.0",
     "@vue/compiler-sfc": "^3.0.4",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-vue": "^7.16.0",
+    "less": "^4.1.1",
+    "less-loader": "^10.0.1",
     "prettier": "^2.3.2",
     "typescript": "^4.3.5",
-    "vite": "^1.0.0-rc.13",
-    "less": "^4.1.1",
-    "less-loader": "^10.0.1"
+    "vite": "^2.5.0"
   }
 }
