--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.1",
     "eslint-plugin-vue": "^7.16.0",
+    "fs": "^0.0.1-security",
     "less": "^4.1.1",
     "less-loader": "^10.0.1",
     "prettier": "^2.3.2",
+    "svg-sprite-loader": "^6.0.9",
     "typescript": "^4.3.5",
     "vite": "^2.5.0"
   }
