--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vite build"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "element-plus": "^1.0.2-beta.71",
     "vue": "^3.2.4",
     "vue-router": "^4.0.11",
