--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,7 +32,7 @@
     "target": "esnext",
     
     // 要包含的类型声明文件名列表
-    "types": [],
+    "types": [ "vite/client" ],
 
     "isolatedModules": true,
 
