--- a/.env.production
+++ b/.env.production
@@ -3,4 +3,4 @@ ENV = 'production'
 
 # base api
 VITE_APP_BASE_API = '/api'
-VITE_APP_CERT_CLIENT_BASE_API = 'http://api.sunqm.com:9080'
+VITE_APP_CERT_CLIENT_BASE_API = 'http://api.sunqm.com'
