--- a/tsconfig.json
+++ b/tsconfig.json
@@ -55,7 +55,8 @@
     "src/**/*.tsx",
     "src/**/*.vue",
     "tests/**/*.ts",
-    "tests/**/*.tsx"
+    "tests/**/*.tsx",
+    "./types/*.d.ts"
   ],
   "exclude": [
     "node_modules"
