--- a/.env.production
+++ b/.env.production
@@ -2,5 +2,6 @@
 VITE_APP_ENV = 'production'
 
 # base api
-VITE_APP_BASE_API = ''
+# 虽然可以不用代理头，用一下方便nginx区分接口，进行转发
+VITE_APP_BASE_API = '/api'
 VITE_APP_CERT_CLIENT_BASE_API = ''
