--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.26.1",
-    "element-plus": "^1.0.2-beta.71",
+    "element-plus": "^2.7.7",
     "marked": "^4.0.14",
     "vue": "^3.2.4",
     "vue-router": "^4.0.11",
@@ -22,15 +22,15 @@
     "@typescript-eslint/parser": "^4.29.2",
     "@vitejs/plugin-vue": "^1.4.0",
     "@vue/compiler-sfc": "^3.2.4",
+    "esbuild": "^0.23.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.1",
     "eslint-plugin-vue": "^7.16.0",
-    "fs": "^0.0.1-security",
     "less": "^4.1.1",
     "prettier": "^2.3.2",
     "svg-sprite-loader": "^6.0.9",
     "typescript": "^4.3.5",
-    "vite": "^2.5.0"
+    "vite": "^5.3.4"
   }
 }
