--- a/.env.cloud
+++ b/.env.cloud
@@ -3,4 +3,4 @@ VITE_APP_ENV = 'development'
 
 # base api
 VITE_APP_BASE_API = '/api'
-VITE_APP_CERT_CLIENT_BASE_API = 'http://api.sunqm.com'
+VITE_APP_CERT_CLIENT_BASE_API = 'http://sunqm.com/api'
