--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "dependencies": {
     "axios": "^0.26.1",
-    "element-plus": "^2.7.7",
     "marked": "^4.0.14",
+    "mitt": "^3.0.1",
     "vue": "^3.2.4",
     "vue-router": "^4.0.11",
     "vuex": "^4.0.2"
