--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 node_modules
 .DS_Store
-dist
+
+# 忽略 dist 下的文件但是，/dist/dist.zip 不忽略，作为上传文件
+/dist
+!/dist/dist.zip
+/suorcemap
+
 dist-ssr
 *.local
