--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "scripts": {
     "dev": "node node_modules/esbuild/install.js && vite",
     "dev:cloud": "node node_modules/esbuild/install.js && vite --mode cloud",
-    "build": "vite build --base=/page/home/ --mode production"
+    "build": "vite build --base=/page/home/ --mode production",
+		"release": "vite build --base=/page/home/ && git commit -a -m publish && git push"
   },
   "dependencies": {
+    "@madder/vite-build": "^0.0.1",
     "axios": "^0.26.1",
     "marked": "^4.0.14",
     "mitt": "^3.0.1",
